:white_check_mark: Test with larger objects

--- a/interactiveTest/browser.dev.tests.html
+++ b/interactiveTest/browser.dev.tests.html
@@ -27,7 +27,9 @@
       src="../dist-dev/index.js"
     ></script>
     <script src="./generateRandomObject.js"></script>
+    <script src="./generateDotPaths.js"></script>
     <script src="./getDotPaths.js"></script>
+    <script src="./createObjectFromDotPaths.js"></script>
     <script src="./browser.js"></script>
   </head>
   <body>
