--- a/interactiveTest/browser.prod.tests.html
+++ b/interactiveTest/browser.prod.tests.html
@@ -27,7 +27,9 @@
       src="../dist/index.min.js"
     ></script>
     <script src="./generateRandomObject.js"></script>
+    <script src="./generateDotPaths.js"></script>
     <script src="./getDotPaths.js"></script>
+    <script src="./createObjectFromDotPaths.js"></script>
     <script src="./browser.js"></script>
   </head>
   <body>
