:white_check_mark: Add unpkg to browser tests

--- a/browser-testing/index.html
+++ b/browser-testing/index.html
@@ -66,6 +66,11 @@
                 >
                   jsDelivr
                 </option>
+                <option
+                  value="https://unpkg.com/@codejamboree/replace-tags"
+                >
+                  Unpkg
+                </option>
               </select>
               <select id="cdnVersion">
                 <option value="latest">Latest</option>
